# monitor

./: Cargo.toml  LICENSE  README.md  README.pt-br.md  install.sh
scripts/: build-all.ps1  build-linux.sh  build-mac.sh  build-macos.sh  build-windows.ps1  install.sh
src/: hardware.rs  main.rs
