[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.29.0"
crossterm = "0.27.0"
tui = "0.19.0"
nvml-wrapper = "0.9.0"
chrono = "0.4"
humansize = "2.1.3"
clap = { version = "4.4.11", features = ["derive"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
directories = "5.0"
toml = "0.8"

[target.'cfg(windows)'.dependencies]
wmi = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"